--- a/CommissionsModule/Themes/Generic.xaml
+++ b/CommissionsModule/Themes/Generic.xaml
@@ -7,6 +7,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Views/Decisions/CommissionDecisionView.xaml" />
         <ResourceDictionary Source="../Views/Common/CommonView.xaml" />
+        <ResourceDictionary Source="../Views/Common/CreateTalonView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/PreliminaryProtocolView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionСonductView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionСonclusionView.xaml" />
